[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/resources/playerMachine/machine_Powershot.tres" type="Resource" id=1]
[ext_resource path="res://scripts/player/Player_Old.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/SS_playerShip.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/weapons/Player_WeaponOld.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/player/pickup/snd_medal_pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/player/weapon/snd_weapon_levelup.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/player/snd_player_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/player/pickup/snd_weapongem_pickup.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[sub_resource type="CircleShape2D" id=9]
radius = 15.0

[sub_resource type="CircleShape2D" id=8]
radius = 120.0

[sub_resource type="Animation" id=4]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hit"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0.0117647 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0.0117647 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "leanLeft"
length = 0.2
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ), Vector2( -3, -4 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "leanRight"
length = 0.2
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ), Vector2( -3, 4 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
WeaponGemPickupSFX = ExtResource( 8 )
MedalPickupSFX = ExtResource( 5 )
PlayerTakeDamageSFX = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="PlayerHitSFX" type="AudioStreamPlayer2D" parent="Hitbox"]

[node name="WorldCollision" type="Area2D" parent="."]
visible = false
position = Vector2( -5, 0 )
collision_layer = 2
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldCollision"]
shape = SubResource( 9 )

[node name="ItemPickupRange" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupRange"]
shape = SubResource( 8 )

[node name="PickupSFX" type="AudioStreamPlayer" parent="ItemPickupRange"]

[node name="SpriteAnchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
position = Vector2( -3, -3 )
rotation = 1.5708
texture = ExtResource( 3 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteAnchor"]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/hit = SubResource( 7 )
anims/leanLeft = SubResource( 6 )
anims/leanRight = SubResource( 5 )

[node name="Weapon" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )
WeaponLevelUpSFX = ExtResource( 6 )
machineWeapon_backup = ExtResource( 1 )

[node name="MainWeapon" type="Node2D" parent="Weapon"]
position = Vector2( 16, 0 )

[node name="Level0" type="Node2D" parent="Weapon/MainWeapon"]
visible = false

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level0"]
position = Vector2( 3, -6 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level0"]
position = Vector2( 3, 5 )

[node name="Level1" type="Node2D" parent="Weapon/MainWeapon"]
visible = false

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level1"]
position = Vector2( 33, -14 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level1"]
position = Vector2( 33, 14 )

[node name="FirePoint3" type="Position2D" parent="Weapon/MainWeapon/Level1"]
position = Vector2( -5, 0 )

[node name="Level2" type="Node2D" parent="Weapon/MainWeapon"]

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level2"]
position = Vector2( 7, -10 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level2"]
position = Vector2( 7, 10 )

[node name="FirePoint3" type="Position2D" parent="Weapon/MainWeapon/Level2"]
position = Vector2( 33, -18 )

[node name="FirePoint4" type="Position2D" parent="Weapon/MainWeapon/Level2"]
position = Vector2( 33, 19 )

[node name="FirePoint5" type="Position2D" parent="Weapon/MainWeapon/Level2"]
position = Vector2( 3, 0 )

[node name="SubWeapon" type="Node2D" parent="Weapon"]
position = Vector2( -40, 0 )

[node name="MainWeaponSFX" type="AudioStreamPlayer" parent="Weapon"]

[node name="SubWeaponSFX" type="AudioStreamPlayer" parent="Weapon"]

[node name="LevelUpSFX" type="AudioStreamPlayer" parent="Weapon"]
stream = ExtResource( 6 )

[connection signal="area_entered" from="ItemPickupRange" to="." method="_on_ItemPickupRange_area_entered"]
[connection signal="need_weapon" from="Weapon" to="." method="_on_Weapon_need_weapon"]
[connection signal="toggle_useSubweapon" from="Weapon" to="." method="_on_Weapon_toggle_useSubweapon"]
[connection signal="update_weaponLevel" from="Weapon" to="." method="_on_Weapon_update_weaponLevel"]
[connection signal="weapon_levelup" from="Weapon" to="." method="_on_Weapon_weapon_levelup"]
